Save provenance file

--- a/.github/workflows/build-hello.yaml
+++ b/.github/workflows/build-hello.yaml
@@ -1,17 +1,29 @@
 name: "Build with provenance"
 on:
   workflow_dispatch:
+    inputs:
+      flakeref:
+        required: true
 
 jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: cachix/install-nix-action@v22
+
+    - name: Install nix
+      uses: cachix/install-nix-action@v22
       with:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
-    - run: ./nix-build-with-provenance.sh
+
+    - name: Build with provenance
+      run: ./nix-build-with-provenance.sh ${{ github.event.inputs.flakeref }}
       env:
         PROVENANCE_INVOCATION_ID: ${{ github.run_number }}
         PROVENANCE_BUILDER_ID: ${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}
         PROVENANCE_BUILD_TYPE: TBD
+
+    - uses: actions/upload-artifact@v4
+      with:
+        name: provenance
+        path: provenance.json
