--- a/action.yaml
+++ b/action.yaml
@@ -4,9 +4,11 @@ inputs:
   target:
     description: The nix target to build
     required: true
+  
   build-args:
     description: arguments given to nix build 
     required: false
+
   install-nix:
     required: false
     default: 'true'
@@ -19,36 +21,40 @@ outputs:
 runs:
   using: composite
   steps:
+
     - name: Install nix
       uses: cachix/install-nix-action@v26
       if: inputs.install-nix == 'true'
 
     - id: get-context
-      run: echo "context=$GITHUB_CONTEXT" >> $GITHUB_OUTPUT
-      env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
       shell: bash
+      run: |
+        {
+          echo 'PROVENANCE_INTERNAL_PARAMS<<EOF'
+          $(echo ${{ toJson(github) }} | jq 'del(.token)')
+          echo EOF 
+        } >> "$GITHUB_ENV"
    
     - id: timestamp-begin
-      run: echo "timestamp=$(date +%s)" >> $GITHUB_OUTPUT
       shell: bash
+      run: echo "timestamp=$(date +%s)" >> $GITHUB_OUTPUT
 
     - id: build
-      run: nix build ${{ inputs.target }} ${{ inputs.build-args }}
       shell: bash
+      run: nix build ${{ inputs.target }} ${{ inputs.build-args }}
 
     - id: timestamp-end
+      shell: bash
       run: echo "timestamp=$(date +%s)" >> $GITHUB_OUTPUT
-      shell: bash
 
-    - run: nix run github:tiiuae/sbomnix#provenance ${{ inputs.target }}
+    - id: generate-provenance
       shell: bash
+      run: nix run github:tiiuae/sbomnix#provenance ${{ inputs.target }}
       env:
         PROVENANCE_OUTPUT_FILE: /tmp/provenance.json
         PROVENANCE_TIMESTAMP_BEGIN: ${{ steps.timestamp-begin.outputs.timestamp }}
         PROVENANCE_TIMESTAMP_FINISHED: ${{ steps.timestamp-end.outputs.timestamp }}
         PROVENANCE_EXTERNAL_PARAMS: ${{ toJson(inputs) }}
-        PROVENANCE_INTERNAL_PARAMS: ${{ steps.get-context.outputs.context }}
         PROVENANCE_INVOCATION_ID: ${{ github.run_number }}
         PROVENANCE_BUILDER_ID: "https://github.com/actions/runner/github-hosted" 
         PROVENANCE_BUILD_TYPE: "https://github.com/Attestations/GitHubActionsWorkflow@v1"
